infra_v6_KalyanAanton/z1-dashboards/51-ing-default/01-Nginx-App1-Deployment-and-NodePortService.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-default-backend
  namespace: ing-default-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-default-backend
  template:
    metadata:
      labels:
        app: app-default-backend
    spec:
      containers:
        - name: app-default-backend
          image: therafk/rkapp21:1.0 # stacksimplify/kube-nginxapp1:1.0.0 
          ports:
            - containerPort: 80
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: app-default-backend-svc
  namespace: ing-default-backend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /index.html
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  selector:
    app: app-default-backend
  ports:
    - port: 80
      targetPort: 80
