infra_v6_KalyanAanton/z1-dashboards/51-ing-default/90-ing-default-backend.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-backend-ing
  namespace: ing-default-backend
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: rk-ing-v1
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
  # alb.ingress.kubernetes.io/healthcheck-path: healthchek on service level /app1/index.html
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200-299'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/target-type: ip
    # SSL
    alb.ingress.kubernetes.io/ssl-redirect: '443'   # SSL Redirect Setting
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    # Ingress Groups
    alb.ingress.kubernetes.io/group.name: rk.ing.group
    alb.ingress.kubernetes.io/group.order: '100'
    external-dns.alpha.kubernetes.io/hostname: defaultbackend.ops.perf.openjawhosting.com
spec:
  tls:      # this allows skip certificate-arn
  - hosts:
      - ops.perf.openjawhosting.com
  defaultBackend:
    service:
      name: app-default-backend-svc
      port:
        number: 80
